test/fail/optargs/optarg_too_few.lly
#[
SyntaxError: Wrong number of arguments to f (0 for 1..2).
    from optarg_too_few.lly:10
]#

define f(a: integer, b: *integer = 10) {

}

f()
